Ankesh - decommissioning old ScanOperator. Please use IndexScanOperator always from now on.