@@ -1,11 +1,12 @@
 package edu.buffalo.cse562.operator.indexscan;
 
 import edu.buffalo.cse562.data.Datum;
+import edu.buffalo.cse562.model.TableInfo;
 import edu.buffalo.cse562.operator.Operator;
-import edu.buffalo.cse562.operator.ScanOperator;
 import edu.buffalo.cse562.schema.ColumnSchema;
 import jdbm.PrimaryStoreMap;
 import net.sf.jsqlparser.expression.Expression;
+import net.sf.jsqlparser.statement.create.table.ColumnDefinition;
 
 import java.util.List;
 import java.util.ListIterator;
@@ -14,18 +15,16 @@ import static edu.buffalo.cse562.operator.utils.ScanUtils.getDatumsForRelevantCo
 
 public class IndexScanOperator implements Operator {
 
-    private final PrimaryStoreMap<Long, String> storeMap;
+    private ColumnSchema[] schema;
+    private List<Integer> relevantColumnIndexes;
+
+    private PrimaryStoreMap<Long, String> storeMap;
     private ListIterator<Long> keyListIterator;
-    private final List<Long> keyList;
-    private final ScanOperator in;
+    private List<Long> keyList;
 
-    public IndexScanOperator(Operator in, List<Expression> conditions) {
-        this.in = (ScanOperator) in;
-
-        final IndexScanHelper helper = new IndexScanHelper(in.getSchema(), conditions);
-        keyList = helper.getFilteredRowIds();
-        storeMap = helper.getStoreMap();
-        reset();
+    public IndexScanOperator(TableInfo tableInfo, ColumnSchema[] finalSchema) {
+        makeSchema(tableInfo, finalSchema);
+        setConditionsToFilterDataOn(null);
     }
 
     @Override
@@ -36,8 +35,33 @@ public class IndexScanOperator implements Operator {
 
         return getDatumsForRelevantColumnPositions(
                 storeMap.get(keyListIterator.next()),
-                in.getRelevantColumnIndexes(),
-                in.getSchema());
+                relevantColumnIndexes,
+                schema);
+    }
+
+    public void setConditionsToFilterDataOn(List<Expression> conditions) {
+        final IndexScanHelper helper = new IndexScanHelper(schema, conditions);
+        keyList = helper.getFilteredRowIds();
+        storeMap = helper.getStoreMap();
+        reset();
+    }
+
+    private void makeSchema(TableInfo tableInfo, ColumnSchema[] finalSchema) {
+        if (finalSchema == null) {
+            final List<ColumnDefinition> allColumnDefinitions = tableInfo.getColumnDefinitions();
+            relevantColumnIndexes = tableInfo.getColumnIndexesUsed();
+            schema = new ColumnSchema[relevantColumnIndexes.size()];
+
+            ColumnDefinition columnDefinition;
+            for (int i = 0; i < relevantColumnIndexes.size(); i++) {
+                columnDefinition = allColumnDefinitions.get(relevantColumnIndexes.get(i));
+                schema[i] = new ColumnSchema(columnDefinition.getColumnName(), columnDefinition.getColDataType().getDataType());
+                schema[i].setTableName(tableInfo.getTableName());
+                schema[i].setTableAlias(tableInfo.getAlias());
+            }
+        } else {
+            schema = finalSchema;
+        }
     }
 
     @Override
@@ -47,11 +71,11 @@ public class IndexScanOperator implements Operator {
 
     @Override
     public ColumnSchema[] getSchema() {
-        return in.getSchema();
+        return schema;
     }
 
     @Override
     public Long getProbableTableSize() {
-        return new Long(keyList.size() * 100);
+        return Long.valueOf(keyList.size() * 100);
     }
 }
